# hwpx-mcp-server

./: .dockerignore  .gitignore  .hwpx-verify-eecd5dba9f213c77cdcd5ff15edec603-output.hwpx  .hwpx-verify-eecd5dba9f213c77cdcd5ff15edec603-source.hwpx  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  PHASE2_REPORT.md  PHASE3_REPORT.md  PR_BODY_final_scope_and_skill_alignment.md  PR_BODY_phase1_core_truth_and_upstream_sync.md  PR_BODY_phase3_upstream_hardening.md  PR_BODY_phase4_scope_pivot_no_new_public_tools.md  PR_BODY_phase5_skill_first_workflows.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  tests.yml
docs/: 2026-06-24-playmcp-agentic-player-10-plan.md  deprecation-5.0.0.md  follow-up-roadmap.md  hardening_guide_ko.md  mcp-sdk-reaudit.md  product-boundary-migration-3.0.0.md  release-handoff-2026-05-30.md  release-readiness-checklist.md  skill-first-workflows.md  tool-contract-delta-3.0.0.json  tool-contract-delta-4.0.0.json  tool-contract-delta-4.3.0.json  tool-contract-delta-4.4.0.json  tool-contract-delta-5.0.0.json  tool-contract-delta-5.1.0.json  tool-contract.generated.json  tool-contract.md  upstream-audit.md  use-cases.md
docs/superpowers/specs/: 2026-06-24-daegukmin-hangeul-document-assistant-design.md
examples/skills/form-fill/: SKILL.md
examples/skills/reference-preserving-edit/: SKILL.md
examples/skills/template-generation/: SKILL.md
mcp-server/src/: HwpxDocument.ts  SaveVerificationReport.test.ts  SaveVerificationReportIntegration.test.ts  index.ts
scripts/: check_architecture_ratchets.py  check_public_hygiene.py  hancom_render_queue_service.py  render_contract_delta.py  render_tool_contract.py
src/hwpx_mcp_server/: __init__.py  agent_document.py  blind_eval.py  capabilities.py  compat.py  document_state.py  errors.py  execution_lock.py  fastmcp_adapter.py  form_fill.py  form_output_models.py  fs.py  hwp_converter.py  hwp_support.py  hwpx_ops.py  ingest_adapters.py  legacy_server.py  logging_conf.py  markdown_plan.py  mixed_form.py  mutation_models.py  network_policy.py  preview_output_models.py  prompts.py  quality.py  quality_generation.py  runtime.py  runtime_services.py  server.py  storage.py  tool_bindings.py  tool_contract.py  tools.py  upstream.py  visual_qa.py  workspace.py
src/hwpx_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hwpx_mcp_server/core/: __init__.py  content.py  context.py  diff.py  document.py  formatting.py  handles.py  locations.py  locator.py  plan.py  resources.py  search.py  transactions.py  txn.py
src/hwpx_mcp_server/handlers/: __init__.py  _shared.py  agent_document.py  authoring.py  content_edit.py  form_fill.py  layout_style.py  quality_render.py  read_export.py  specialized.py  tracked_changes.py  workflow.py
src/hwpx_mcp_server/metadata/: tools_meta.py
src/hwpx_mcp_server/ops_services/: __init__.py  _border_fill.py  composition.py  content_layout.py  context.py  form_fields.py  media.py  memo_style.py  package_validation.py  planning.py  preview_export.py  read_query.py  save_policy.py  tables.py  transactions.py
src/hwpx_mcp_server/practice/: __init__.py  campaign_service.py  dispatch.py  queue.py  runtime.py  sandbox.py  scenario_service.py  selection.py  store.py
src/hwpx_mcp_server/schema/: builder.py  sanitizer.py
src/hwpx_mcp_server/utils/: __init__.py  helpers.py
src/hwpx_mcp_server/workflow/: __init__.py  adapters.py  dispatcher.py  models.py  policy.py  render_contracts.py  render_metrics.py  render_queue.py  render_security.py  render_transport.py  rendering.py  service.py  state_machine.py  store.py
tests/: conftest.py  hwpx_mcp_report.md  hwpx_mcp_report_updated.md  hwpx_mcp_test.hwpx  render_preview_visual_evidence.md  sample.hwpx  test_advanced.py  test_advanced_generators_mcp.py  test_agent_document.py  test_architecture_ratchets.py  test_blind_eval_fixture.py  test_capabilities.py  test_compat_id_sanitizer.py  test_content.py  test_contract.py  test_create_document_m3_routing.py  test_doc_diff_mcp.py  test_document_ingest_mcp.py  test_document_plan_mcp_e2e.py  test_document_plan_schema_tool.py  test_error_suggestions.py  test_evalplan_fill_mcp.py  test_exam_mcp.py  test_fastmcp_adapter.py  test_fastmcp_runtime_compatibility.py  test_file_edit_e2e.py  test_form_fill_mcp_e2e.py  test_format_edit_tools.py  test_formatting.py  test_government_report_tools.py  test_guidance_scan_mcp.py  test_heading_outline_style.py  test_http_storage.py  test_hwp_converter.py  test_hwpx_ops.py  test_hwpx_ops_service_boundaries.py  test_hwpx_report_regressions.py  test_locator_models.py  test_mail_merge_fit_mcp.py  test_mail_merge_table_compute_mcp.py  (+59 more)
