[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwpx-mcp-server"
version = "4.0.0"
description = "MCP server for reading, editing, inspecting, and validating local HWPX documents with AI agents."
readme = "README.md"
authors = [{ name = "Kohkyuhyun" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
keywords = ["hwpx", "hancom", "mcp", "model-context-protocol", "document-automation", "ai-agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-hwpx>=3.1.0", # typed mixed-form compiler and transactional document safety

    "pydantic>=2.11,<3",
    "cryptography>=42.0",
    "anyio>=4.0",
    # Annotated CallToolResult validation landed in 1.28; keep the audited
    # private FastMCP seam on one minor line until S-080 replaces it.
    "mcp>=1.28.1,<1.29",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Legacy .hwp (HWP5/OLE2) reading. Lazy-imported; clear error if missing.
hwp = ["olefile>=0.47"]
# HTTP/streamable transport. The default stdio transport needs no extra.
http = ["uvicorn>=0.30"]
# Advertised non-HWPX ingest formats only. Avoid cloud/audio/mail extras and their
# unrelated dependency trees; HTML and text formats are supported by the base.
ingest = ["markitdown[pdf,docx,xlsx]>=0.1.6,<0.2"]
# 직인 날인/검증의 한컴 렌더 오라클 경로(렌더→fitz word/image bbox). macOS+Hancom 필요;
# 없으면 place_seal/check_seal_compliance가 renderChecked=false로 정직하게 degrade한다.
oracle = ["python-hwpx[visual]>=3.1.0"]
vision = ["python-hwpx[visual]>=3.1.0"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.22",
    "olefile>=0.47",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "pillow>=10.0",
    "ruff>=0.12",
]

[project.urls]
Homepage = "https://github.com/airmang/hwpx-mcp-server"
Issues = "https://github.com/airmang/hwpx-mcp-server/issues"

[project.scripts]
"hwpx-mcp-server" = "hwpx_mcp_server.server:main"

# Co-located development: resolve python-hwpx from the sibling checkout.
# This affects local `uv` resolution only; published metadata keeps `python-hwpx>=3.1.0`.
[tool.uv.sources]
python-hwpx = { path = "../python-hwpx", editable = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
