[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwpx-mcp-server"
version = "4.2.0"
description = "MCP server for reading, editing, inspecting, and validating local HWPX documents with AI agents."
readme = "README.md"
authors = [{ name = "Kohkyuhyun" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
keywords = ["hwpx", "hancom", "mcp", "model-context-protocol", "document-automation", "ai-agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-hwpx>=3.3.0", # typed multi-story compiler and transactional document safety

    "pydantic>=2.11,<3",
    "cryptography>=42.0",
    "anyio>=4.0",
    # Annotated CallToolResult validation landed in 1.28; the audited private
    # FastMCP seam is intentionally pinned to this minor line and compatibility-tested.
    "mcp==1.28.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Legacy .hwp (HWP5/OLE2) reading. Lazy-imported; clear error if missing.
hwp = ["olefile>=0.47"]
# HTTP/streamable transport. The default stdio transport needs no extra.
http = ["uvicorn>=0.30"]
# Advertised non-HWPX ingest formats only. Avoid cloud/audio/mail extras and their
# unrelated dependency trees; HTML and text formats are supported by the base.
ingest = ["markitdown[pdf,docx,xlsx]>=0.1.6,<0.2"]
# 직인 날인/검증의 한컴 렌더 오라클 경로(렌더→fitz word/image bbox). macOS+Hancom 필요;
# 없으면 place_seal/check_seal_compliance가 renderChecked=false로 정직하게 degrade한다.
oracle = ["python-hwpx[visual]>=3.3.0"]
vision = ["python-hwpx[visual]>=3.3.0"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.22",
    "olefile>=0.47",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "pillow>=10.0",
    "ruff>=0.12",
]
typecheck = [
    "mypy>=1.10,<3",
    "pyright>=1.1.390,<2",
]

[project.urls]
Homepage = "https://github.com/airmang/hwpx-mcp-server"
Issues = "https://github.com/airmang/hwpx-mcp-server/issues"

[project.scripts]
"hwpx-mcp-server" = "hwpx_mcp_server.server:main"

# Co-located development: resolve python-hwpx from the sibling checkout.
# This affects local `uv` resolution only; published metadata keeps `python-hwpx>=3.3.0`.
[tool.uv.sources]
python-hwpx = { path = "../python-hwpx", editable = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
files = [
    "src/hwpx_mcp_server/handlers",
    "src/hwpx_mcp_server/ops_services",
    "src/hwpx_mcp_server/runtime.py",
    "src/hwpx_mcp_server/runtime_services.py",
    "src/hwpx_mcp_server/fastmcp_adapter.py",
    "src/hwpx_mcp_server/tool_bindings.py",
    "src/hwpx_mcp_server/server.py",
    "src/hwpx_mcp_server/hwpx_ops.py",
    "src/hwpx_mcp_server/form_fill.py",
    "src/hwpx_mcp_server/tool_contract.py",
    "src/hwpx_mcp_server/workflow/service.py",
]
follow_imports = "skip"
ignore_missing_imports = true
implicit_optional = true
warn_unused_ignores = true
show_error_codes = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = [
    "src/hwpx_mcp_server/runtime.py",
    "src/hwpx_mcp_server/runtime_services.py",
    "src/hwpx_mcp_server/fastmcp_adapter.py",
    "src/hwpx_mcp_server/tool_bindings.py",
    "src/hwpx_mcp_server/tool_contract.py",
    "src/hwpx_mcp_server/server.py",
    "src/hwpx_mcp_server/handlers/_shared.py",
    "src/hwpx_mcp_server/ops_services/composition.py",
]
# Public ToolSpec signatures are schema-frozen, while concrete operations still
# depend on legacy dynamic python-hwpx objects. Mypy covers both areas above;
# pyright is intentionally limited to the central runtime and composition seams.
exclude = [
    "src/hwpx_mcp_server/handlers/agent_document.py",
    "src/hwpx_mcp_server/handlers/authoring.py",
    "src/hwpx_mcp_server/handlers/content_edit.py",
    "src/hwpx_mcp_server/handlers/form_fill.py",
    "src/hwpx_mcp_server/handlers/layout_style.py",
    "src/hwpx_mcp_server/handlers/quality_render.py",
    "src/hwpx_mcp_server/handlers/read_export.py",
    "src/hwpx_mcp_server/handlers/specialized.py",
    "src/hwpx_mcp_server/handlers/tracked_changes.py",
    "src/hwpx_mcp_server/handlers/workflow.py",
    "src/hwpx_mcp_server/form_fill.py",
    "src/hwpx_mcp_server/hwpx_ops.py",
    "src/hwpx_mcp_server/ops_services/content_layout.py",
    "src/hwpx_mcp_server/ops_services/context.py",
    "src/hwpx_mcp_server/ops_services/form_fields.py",
    "src/hwpx_mcp_server/ops_services/media.py",
    "src/hwpx_mcp_server/ops_services/memo_style.py",
    "src/hwpx_mcp_server/ops_services/package_validation.py",
    "src/hwpx_mcp_server/ops_services/planning.py",
    "src/hwpx_mcp_server/ops_services/preview_export.py",
    "src/hwpx_mcp_server/ops_services/read_query.py",
    "src/hwpx_mcp_server/ops_services/save_policy.py",
    "src/hwpx_mcp_server/ops_services/tables.py",
    "src/hwpx_mcp_server/ops_services/transactions.py",
    "src/hwpx_mcp_server/workflow/service.py",
]
reportMissingTypeStubs = false
